# opp_aware_mppi_f1tenth

./: .gitignore  IMPORTANT_DEBUG_MPPI.md  MPPI_GUIDE.md  MPPI_SYSTEM_OVERVIEW.md  README.md
mppi_bringup/config/: .params_lev.yaml.swp  .params_real.yaml.swp  overtaking_zones.yaml  params_houston_main.yaml  params_ice.yaml  params_lev.yaml  params_lev_old.yaml  params_real.yaml  params_realev_overtake.yaml  params_sim.yaml  params_sim_houston.yaml  params_sim_lev.yaml  params_sim_lev_overtake.yaml  params_sim_overtake.yaml  params_sim_skirk.yaml  params_skirk.yaml  params_slow_houston_main.yaml
mppi_bringup/launch/: .lev.launch.py.swp  houston_main1.launch.py  houston_secondary1.launch.py  lev.launch.py  real.launch.py  sim.launch.py  sim_houston.launch.py  sim_lev.launch.py  (+2 more)
mppi_example/: package.xml  setup.py
opponent_predictor/: CMakeLists.txt  README.md
opponent_predictor/config/: lidar_detector.yaml  params.yaml
opponent_predictor/config/hardware/: lidar_detector.yaml  params.yaml
opponent_predictor/config/old/hardware/: lidar_detector.yaml  params.yaml
opponent_predictor/config/old/sim/: lidar_detector.yaml  params.yaml
opponent_predictor/config/sim/: lidar_detector.yaml  params.yaml
opponent_predictor/launch/: opponent_predictor.launch.py  real_lev2fl_opp_pred.launch.py  real_opponent_predictor.launch.py  sim_opponent_predictor.launch.py
opponent_predictor/launch/old/: lev_real_opponent_predictor.launch.py  lev_sim_opponent_predictor.launch.py
opponent_predictor/src/: opponent_lidar_detector_node.cpp  opponent_predictor_node.cpp
(+53 files in other folders)
